# Valdi

./: .bazelrc  MODULE.bazel  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bzl-changes.yml  comment-test-results.yml  pr-size-labeler.yml  publish-npm.yml  release-test.yml  test-cli-linux.yml
ai-skills/: registry.json
apps/helloworld/: BUILD.bazel
apps/helloworld/src/valdi/hello_world/: BUILD.bazel
apps/helloworld/src/valdi/hello_world/src/: ByteExactImageExample.tsx  HelloWorldApp.tsx
apps/helloworld/standalone_app/: BUILD.bazel
apps/managed_context_example/: ManagedContextExample.tsx
apps/snapshot_tests/: BUILD.bazel
apps/snapshot_tests/src/: CompareSnapshots.ts  DiffImage.ts  PixelDiff.ts  RenderTestCases.ts  main.tsx
apps/snapshot_tests/src/cases/: AbsolutePositioning.tsx  AlignContentWrap.tsx  AlignSelfOverrides.tsx  AspectRatioLayout.tsx  BasicLayout.tsx  CustomMeasure.tsx  DisplayNone.tsx  FlexBasisVariants.tsx  MinMaxConstraints.tsx  NegativeMargins.tsx  NestedViews.tsx  PercentageSizing.tsx  ReverseDirections.tsx  TestFont.ts  TextAlignment.tsx  TextCombined.tsx  TextDecoration.tsx  TextLetterSpacing.tsx  TextLineHeight.tsx  TextMultiline.tsx  TextRendering.tsx  TextShadow.tsx  TextTruncation.tsx  index.tsx
bzl/: additional_dependencies.bzl  dependencies.bzl  hermetic_android_sdk.bzl  hermetic_ndk.bzl  open_source_archives.bzl  prebuilt_tools.bzl  swift_toolchains.bzl  valdi_compiler_repos_extension.bzl  valdi_library.bzl  workspace_init.bzl
bzl/macros/: android.bzl
bzl/runtime_flags/: BUILD.bazel
bzl/swift_toolchains/: BUILD.bazel  remote_swift_toolchain_repository.bzl  rules.bzl
bzl/testing/: BUILD.bazel  macos_xctest_agent_runner.bzl  macos_xctest_agent_runner.template.sh
bzl/toolchains/: BUILD.bazel  MODULE.bazel
bzl/valdi/: BUILD.bazel  common.bzl  (+20 more)
bzlmod/: swift_toolchains_extension.bzl
compiler/compiler/: .gitignore  BUILD.bazel  README.md
compiler/compiler/Compiler/Sources/: BundleManager.swift  ValdiCompiler.swift  ValdiCompilerArguments.swift  ValdiCompilerRunner.swift
compiler/compiler/Compiler/Sources/Config/: ExplicitImageAssetManifest.swift
compiler/compiler/Compiler/Sources/Generation/: ExportedFunctionGenerator.swift  GeneratedTypesDiagnostics.swift  SchemaWriter.swift
compiler/compiler/Compiler/Sources/Generation/Cpp/: CppCodeGenerator.swift  CppFunctionGenerator.swift
compiler/compiler/Compiler/Sources/Generation/Kotlin/: KotlinCodeGenerator.swift  KotlinEmittedTypeReferences.swift  KotlinFunctionGenerator.swift
compiler/compiler/Compiler/Sources/Generation/ObjC/: ObjCCodeGenerator.swift  ObjCDependencyRepresentationGenerator.swift  ObjCFunctionGenerator.swift
compiler/compiler/Compiler/Sources/Generation/Swift/: SwiftCodeGenerator.swift  SwiftFunctionGenerator.swift
compiler/compiler/Compiler/Sources/Images/: ExplicitImageAssetGenerator.swift
compiler/compiler/Compiler/Sources/Parser/Models/: ValdiRawDocument.swift
compiler/compiler/Compiler/Sources/Pipeline/: CompilationItem.swift  CompilationMode.swift
compiler/compiler/Compiler/Sources/Processors/: ApplyTypeScriptAnnotationsProcessor.swift  BundleResourcesProcessor.swift  CombineNativeSourcesProcessor.swift  ExplicitImageAssetsProcessor.swift  GenerateDependencyInjectionDataProcessor.swift  GenerateGlobalMetadataProcessor.swift  GenerateModuleBuildFileProcessor.swift  TypeScriptAnnotationsManager.swift
compiler/compiler/Compiler/Sources/TypeScript/: TypeScriptNativeTypeExporter.swift
compiler/compiler/Compiler/Sources/ViewModels/: CppModelGenerator.swift
compiler/compiler/Compiler/Tests/CompilerTests/: ValdiAnnotationTests.swift
compiler/compiler/scripts/: update_compiler.sh
docs/: DEV_SETUP.md  INSTALL.md
modules/hello_world/: BUILD.bazel
scripts/: premerge_check.sh
snap_drawing/: BUILD.bazel
src/: BUILD.bazel
src/valdi_modules/src/valdi/bridge_observables/: BUILD.bazel  module.yaml
src/valdi_modules/src/valdi/bridge_observables/src/types/: BridgeError.d.ts  BridgeObservable.ts  BridgeObserver.d.ts  BridgeObserverEvent.d.ts  BridgeSubject.d.ts
src/valdi_modules/src/valdi/coreutils/: BUILD.bazel
src/valdi_modules/src/valdi/foundation/: BUILD.bazel
src/valdi_modules/src/valdi/foundation/src/: Error.d.ts  ICancelable.d.ts  Lazy.ts  Long.ts  Provider.ts
src/valdi_modules/src/valdi/foundation/src/functional/: mapArguments.ts
src/valdi_modules/src/valdi/foundation/test/functional/: mapArguments.spec.ts
src/valdi_modules/src/valdi/foundation/web/: ReproducibleGenerator.ts  tsconfig.json
src/valdi_modules/src/valdi/jasmine/: BUILD.bazel
src/valdi_modules/src/valdi/persistence/: BUILD.bazel
src/valdi_modules/src/valdi/persistence/web/: PersistentStoreNative.ts
src/valdi_modules/src/valdi/persistence/web/test/: PersistentStoreNativeWebTest.ts
src/valdi_modules/src/valdi/source_map/: BUILD.bazel
src/valdi_modules/src/valdi/valdi_protobuf/: BUILD.bazel
src/valdi_modules/src/valdi/valdi_protobuf/web/test/: run_tests.js  run_tests.sh
src/valdi_modules/src/valdi/valdi_rxjs/: BUILD.bazel
src/valdi_modules/src/valdi/valdi_rxjs/src/: index.ts
src/valdi_modules/src/valdi/valdi_standalone/: BUILD.bazel
src/valdi_modules/src/valdi/valdi_standalone/src/: NativeModules.ts
src/valdi_modules/src/valdi/valdi_test/: BUILD.bazel
src/valdi_modules/src/valdi/valdi_test/src/: IntegrationTests.tsx
src/valdi_modules/src/valdi/valdi_test/test/: Locale.spec.ts  SpecialCasing.spec.ts
src/valdi_modules/src/valdi/valdi_test/web/: JSXTestUtils.ts
src/valdi_modules/src/valdi/worker/: BUILD.bazel
tools/valdi_web_devtools/: BUILD.bazel  README.md  hmr-loader.js  hmr-server.js  hmr.js  hmr.test.js  index.js  package.json  setup.js  tsconfig.json  valdi_web_playground.bzl  webpack.js
tools/valdi_web_devtools/test_utils/: BUILD.bazel  puppeteer_helpers.js  static_server.js  test_runner.js
valdi/: BUILD.bazel  valdi.bzl
valdi/testdata/resources/modules/test_async_strict/: BUILD.bazel
valdi/testdata/resources/modules/test_async_strict/src/: AsyncStrictModule.ts
valdi_core/: BUILD.bazel
(+382 files in other folders)
