load(
    "//bzl/valdi:valdi_application.bzl",
    "valdi_application",
    "valdi_application_icons",
)
load("//bzl/valdi:valdi_exported_library.bzl", "valdi_exported_library")

valdi_application(
    name = "hello_world",
    android_activity_theme_name = "Theme.MyApp.Launch",
    android_resource_files = glob(["app_assets/android/**"]),
    icons = valdi_application_icons(src = "app_assets/icon.png"),
    ios_bundle_id = "com.snap.valdi.helloworld",
    ios_families = ["iphone"],
    root_component_path = "App@hello_world/src/HelloWorldApp",
    title = "Valdi Hello World",
    version = "1.0.0",
    deps = ["//apps/helloworld/src/valdi/hello_world"],
)

valdi_exported_library(
    name = "hello_world_export",
    ios_bundle_id = "com.snap.hello_world.lib",
    ios_bundle_name = "HelloWorld",
    deps = ["//apps/helloworld/src/valdi/hello_world"],
)

valdi_exported_library(
    name = "hello_world_swift_export",
    ios_bundle_id = "com.snap.hello_world_swift.lib",
    ios_bundle_name = "HelloWorldSwift",
    ios_swift = True,
    web_package_name = "hello_world_swift_npm",
    deps = ["//apps/helloworld/src/valdi/hello_world"],
)
