load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

# When true (default): standalone open_source builds get asserts for fastbuild/dbg; -c opt turns asserts off unless an internal flavor matches (see bzl/toolchains). Set false to force asserts off everywhere.
bool_flag(
    name = "enable_asserts_override",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_logging",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_tracing",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_debug",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "disable_rtti",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
