load("@bazel_skylib//lib:selects.bzl", "selects")
load("@rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain")
load("@valdi//bzl/conditions:custom_selects.bzl", "custom_selects")

KOTLIN_LANGUAGE_LEVEL = "1.8"

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = KOTLIN_LANGUAGE_LEVEL,
    jvm_target = "1.8",
    language_version = KOTLIN_LANGUAGE_LEVEL,
)

# When enable_asserts_override is true (default). Set --@valdi//bzl/runtime_flags:enable_asserts_override=false to force asserts off.
config_setting(
    name = "enable_asserts_override",
    flag_values = {
        "@valdi//bzl/runtime_flags:enable_asserts_override": "true",
    },
)

# Standalone open_source: treat -c opt as "release" for asserts (no flavor path only; internal flavors still use flavor list).
config_setting(
    name = "compilation_mode_opt",
    values = {"compilation_mode": "opt"},
)

custom_selects.config_setting_inverse(
    name = "compilation_mode_not_opt",
    inverse_of = ":compilation_mode_opt",
)

# Release flavors (asserts off): align with main app — gold/master have asserts on, so exclude them here.
selects.config_setting_group(
    name = "release_flavors",
    match_any = [
        "@snap_platforms//flavors:alpha",
        "@snap_platforms//flavors:production",
        "@snap_platforms//flavors:diagnostic_production",
        "@snap_platforms//flavors:coverage",
        "@snap_platforms//flavors:code_coverage",
        "@snap_platforms//flavors:addlive_streamer",
        "@snap_platforms//flavors:addlive_streamer_asserts",
        "@snap_platforms//flavors:production_snapos",
        "@snap_platforms//flavors:production_native_snapos",
    ],
)

custom_selects.config_setting_inverse(
    name = "not_release_flavor",
    inverse_of = ":release_flavors",
)

# No internal flavor: asserts on only if override is true, not a release flavor, and not -c opt (fastbuild/dbg default for dev).
selects.config_setting_group(
    name = "enable_asserts_when_no_release",
    match_all = [
        ":enable_asserts_override",
        ":not_release_flavor",
        ":compilation_mode_not_opt",
    ],
)

# Asserts on: internal client flavor (use flavor value) OR default true when no flavor set. Asserts off when flavor is release.
selects.config_setting_group(
    name = "sc_build_flag_assert",
    match_any = [
        ":enable_asserts_when_no_release",
        "@snap_platforms//flavors:client_development",
        "@snap_platforms//flavors:platform_development",
        "@snap_platforms//flavors:platform_address_sanitizer",
        "@snap_platforms//flavors:master",
        "@snap_platforms//flavors:gold",
        "@snap_platforms//flavors:sanitizer",
        "@snap_platforms//flavors:sanitizer_debug",
        "@snap_platforms//flavors:code_coverage",
        "@snap_platforms//flavors:addlive_streamer_asserts",
        "@snap_platforms//flavors:development_native_snapos",
    ],
)

config_setting(
    name = "sc_build_flag_logging",
    flag_values = {
        "@valdi//bzl/runtime_flags:enable_logging": "true",
    },
)

config_setting(
    name = "sc_build_flag_tracing",
    flag_values = {
        "@valdi//bzl/runtime_flags:enable_tracing": "true",
    },
)

config_setting(
    name = "sc_build_flag_debug",
    flag_values = {
        "@valdi//bzl/runtime_flags:enable_debug": "true",
    },
)

config_setting(
    name = "sc_build_flag_libcxx_rtti_disabled",
    flag_values = {
        "@valdi//bzl/runtime_flags:disable_rtti": "true",
    },
)

alias(
    name = "llvm_ndk_28_0_13004108_strip",
    actual = "@androidndk//:strip",
    visibility = ["//visibility:public"],
)

alias(
    name = "llvm_ndk_28_0_13004108_strip_libs",
    actual = "@androidndk//:strip_libs",
    visibility = ["//visibility:public"],
)
