load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

# Bazel-built Valdi compiler. rules_swift swift_binary built from source.
# Usable directly with:
#   bzl build //compiler/compiler:local_valdi_compiler
#
# The valdi toolchain routes through this target on macOS and Linux when
# --//bzl/valdi:use_local_compiler=true is set (see bzl/valdi:compiler_source).
# On Linux it builds via the pinned Swift toolchain registered in
# //bzl/swift_toolchains.
#
# Notes:
#   - Sentry is excluded; add @sentry//:Sentry to deps when needed.
#   - For a macOS universal binary (arm64+x86_64), build separately per arch and
#     combine with `lipo`. Bazel produces a single-arch binary per invocation.
#   - On Linux, swift-crypto needs BoringSSL; see third-party/swift-packages/swift-crypto.BUILD.
#   - On Linux the Swift runtime is linked statically (so the binary runs on
#     hosts without a Swift installation, mirroring the script's
#     --static-swift-stdlib). That comes from the `swift.static_stdlib`
#     feature on the toolchain in //bzl/swift_toolchains -- rules_swift reads
#     it from the toolchain target, so setting it here would have no effect.
swift_binary(
    name = "local_valdi_compiler",
    srcs = glob(["Compiler/Sources/**/*.swift"]),
    copts = [
        "-DSWIFT_PACKAGE",
        # Emit debug info even in release/optimised builds to aid crash reports.
        "-g",
        # Silence nullability-completeness warnings from the clang importer
        # that processes imported C modules (e.g. glibc stdio) during Swift
        # compilation. Mirrors -Xcc flags the upstream project historically
        # accepted via SPM's implicit clang config.
        "-Xcc",
        "-Wno-nullability",
    ],
    # DEBUG disables the Sentry import in Utils/SentryClient.swift. We don't
    # link Sentry into Bazel builds (see note above about excluding Sentry).
    defines = ["DEBUG"],
    linkopts = select({
        # Mirror the flags SwiftPM injects from the toolchain's
        # lib/swift_static/linux/static-stdlib-args.lnk when building with
        # --static-swift-stdlib: -export-dynamic keeps the binary's own
        # symbols visible to dladdr so Backtrace crash reports stay
        # symbolicated; --exclude-libs ALL keeps the statically linked
        # runtime archives out of the dynamic symbol table.
        #
        # The libicu*swift.a archives are ICU as vendored by the Swift
        # toolchain repo (symbols suffixed _69_swift); the static
        # libFoundation.a references them, whereas the dynamic runtime
        # bundles them as .so files next to libFoundation.so. Resolved via
        # the toolchain's -L .../swift_static/linux search path, so they are
        # hermetic (no host library involved).
        "@platforms//os:linux": [
            "-Wl,-export-dynamic",
            "-Wl,--exclude-libs,ALL",
            "-l:libicui18nswift.a",
            "-l:libicuucswift.a",
            "-l:libicudataswift.a",
        ],
        "//conditions:default": [],
    }),
    module_name = "Compiler",
    visibility = ["//visibility:public"],
    deps = select({
        # Static-runtime link support, hermetic counterparts of what the
        # dynamic Swift runtime would pull from the host at runtime:
        #   - @libxml2: libFoundationXML.a (used via SWXMLHash) needs libxml2;
        #     built from source instead of linking the host's libxml2.so.2.
        #   - shims: two symbols the Swift 5.10 static archives reference
        #     that nothing in our hermetic toolchain provides.
        "@platforms//os:linux": [
            ":linux_static_link_shims",
            "@libxml2",
            "@swift_toolchain_linux_x86_64//:swift_static_search_path",
        ],
        "//conditions:default": [],
    }) + [
        "//compiler/compiler/Compiler/Vendors/BlueSocket",
        "//compiler/compiler/Compiler/Vendors/Clibsass",
        "//compiler/compiler/Compiler/Vendors/SwiftCSSParser",
        "//compiler/compiler/Compiler/Vendors/Zstd",
        "@chalk//:Chalk",
        "@legible_error//:LegibleError",
        "@swift_argument_parser//:ArgumentParser",
        "@swift_backtrace//:Backtrace",
        "@swift_collections//:Collections",
        "@swift_crypto//:Crypto",
        "@swift_protobuf//:SwiftProtobuf",
        "@swiftsoup//:SwiftSoup",
        "@swxmlhash//:SWXMLHash",
        "@yams//:Yams",
        "@zip_lib//:Zip",
    ],
)

# Symbol shims for the Linux static-runtime link; see
# linux_static_link_shims.cpp for what each shim covers and why.
# alwayslink because the references come from Swift runtime archives that
# appear later on the link line than this library.
cc_library(
    name = "linux_static_link_shims",
    srcs = ["linux_static_link_shims.cpp"],
    linkstatic = True,
    target_compatible_with = ["@platforms//os:linux"],
    alwayslink = True,
)

# Pre-built Valdi compiler, produced out-of-band by
# scripts/update_compiler_bazel.sh -o out, which drops the artifact at
# out/{macos,linux}/valdi_compiler. No longer consumed by the valdi
# toolchain (both OSes go through the swift_binary above); kept as an
# escape hatch for running a script-built compiler through Bazel. The file
# doesn't need to exist until someone actually builds this target.
native_binary(
    name = "local_valdi_compiler_native",
    src = select({
        "@bazel_tools//src/conditions:darwin": "out/macos/valdi_compiler",
        "@bazel_tools//src/conditions:linux_x86_64": "out/linux/valdi_compiler",
    }),
    out = "local_valdi_compiler_native",
    visibility = ["//visibility:public"],
)
