load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "hello_world",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    compilation_mode = "js",
    ios_module_name = "SCCHelloWorld",
    ios_output_target = "release",
    res = glob([
        "res/**/*.jpeg",
        "res/**/*.jpg",
        "res/**/*.png",
        "res/**/*.svg",
        "res/**/*.webp",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_tsx",
    ],
)
