load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "bridge_observables",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_class_path = "com.snap.modules.bridge_observables",
    android_output_target = "release",
    ios_language = [
        "objc",
        "swift",
    ],
    ios_module_name = "SCCBridgeObservables",
    ios_output_target = "release",
    single_file_codegen = True,
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/valdi_rxjs",
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
    ],
)
