load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//bzl/valdi:valdi_module.bzl", "valdi_module")

copy_to_bin(
    name = "coreutils_dts",
    srcs = glob([
        "src/**/*.d.ts",
    ]),
    visibility = ["//visibility:public"],
)

ts_project(
    name = "coreutils_web",
    srcs = glob([
        "web/**/*.ts",
        "src/**/*.d.ts",
    ]),
    allow_js = True,
    composite = True,
    declaration = True,
    transpiler = "tsc",
    tsconfig = "web/tsconfig.json",
)

valdi_module(
    name = "coreutils",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "test/**/*.ts",
        "test/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    ios_module_name = "SCCCoreutils",
    ios_output_target = "release",
    visibility = ["//visibility:public"],
    web_deps = [":coreutils_web"],
    web_register_native_module_id_overrides = {
        "coreutils/web/UnicodeNative.js": "coreutils/src/UnicodeNative, coreutils/src/unicode/UnicodeNative",
    },
    deps = [
        "//src/valdi_modules/src/valdi/jasmine",
    ],
)
