load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//bzl/valdi:valdi_module.bzl", "valdi_module")

ts_project(
    name = "foundation_web",
    srcs = glob(["web/**/*.ts"]),
    allow_js = True,
    composite = True,
    declaration = True,
    transpiler = "tsc",
    tsconfig = "web/tsconfig.json",
)

npm_package(
    name = "foundation_dts",
    srcs = glob([
        "src/**/*.d.ts",
    ]),
    package = "foundation",
    visibility = ["//visibility:public"],
)

valdi_module(
    name = "foundation",
    srcs = glob([
        "src/**/*.js",
        "src/**/*.ts",
        "src/**/*.tsx",
        "test/**/*.js",
        "test/**/*.ts",
        "test/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_class_path = "com.snap.valdi.foundation",
    android_output_target = "release",
    ios_module_name = "SCCFoundation",
    ios_output_target = "release",
    single_file_codegen = False,
    visibility = ["//visibility:public"],
    web_deps = [":foundation_web"],
    web_register_native_module_id_overrides = {
        "foundation/web/ReproducibleGenerator.js": "foundation/test/util/ReproducibleGenerator",
    },
    deps = [
        "//src/valdi_modules/src/valdi/jasmine",
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_test",
        "//src/valdi_modules/src/valdi/valdi_tsx",
    ],
)
