load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "jasmine",
    srcs = glob([
        "src/**/*.js",
        "src/**/*.ts",
        "src/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "debug",
    compilation_mode = "js",
    disable_annotation_processing = True,
    ios_module_name = "SCCJasmine",
    ios_output_target = "debug",
    visibility = ["//visibility:public"],
)
