load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@valdi//bzl/valdi:valdi_module.bzl", "valdi_module")

ts_project(
    name = "persistence_web",
    srcs = glob([
        "web/**/*.ts",
        "src/**/*.d.ts",
    ]),
    allow_js = True,
    composite = True,
    declaration = True,
    transpiler = "tsc",
    tsconfig = "web/tsconfig.json",
    deps = [
        "//:valdi_tsx_link",
    ],
)

# The standalone TestsRunner (:test) exercises the native PersistentStore
# binding, not this web implementation, so web durability (issue #119) is
# covered here: run the compiled web impl under node with a fake localStorage.
js_test(
    name = "persistence_web_test",
    data = [":persistence_web"],
    entry_point = "web/test/PersistentStoreNativeWebTest.js",
)

valdi_module(
    name = "persistence",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "test/**/*.ts",
        "test/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    ios_module_name = "SCCPersistence",
    ios_output_target = "release",
    visibility = ["//visibility:public"],
    web_deps = [":persistence_web"],
    web_register_native_module_id_overrides = {
        # persistence/src/PersistentStore.ts does require('PersistentStoreNative')
        "persistence/web/PersistentStoreNative.js": "PersistentStoreNative",
    },
    deps = [
        "@valdi//src/valdi_modules/src/valdi/coreutils",
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
        "@valdi//src/valdi_modules/src/valdi/valdi_standalone",
    ],
)
