load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "source_map",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "test/**/*.ts",
        "test/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    ios_module_name = "SCCSourceMap",
    ios_output_target = "release",
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/coreutils",
        "//src/valdi_modules/src/valdi/jasmine",
    ],
)
