load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@valdi_npm//:defs.bzl", "npm_link_all_packages")
load("//bzl/valdi:valdi_module.bzl", "valdi_module")

# Symlink parent src type definitions into web directory so they're accessible at ../src/
genrule(
    name = "web_src_types",
    srcs = [
        "src/types.d.ts",
        "src/ValdiProtobuf.d.ts",
    ],
    outs = [
        "web/src_symlink/types.d.ts",
        "web/src_symlink/ValdiProtobuf.d.ts",
    ],
    cmd = "cp $(SRCS) $(@D)/web/src_symlink/",
)

# Web code - production and tests compiled together
ts_project(
    name = "valdi_protobuf_web_compiled",
    srcs = glob(
        [
            "web/**/*.ts",
            "web/**/*.d.ts",
        ],
        exclude = [
            "**/*.js",
            "web/node_modules/**",
            "web/src_symlink/**",  # Exclude the generated symlink
        ],
    ) + [
        ":web_src_types",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    out_dir = "web",
    resolve_json_module = True,
    root_dir = "web",
    supports_workers = -1,
    transpiler = "tsc",
    tsconfig = "web/tsconfig.json",
    deps = [
        "//bzl/valdi/npm:node_modules/@protobuf-ts/runtime",
    ],
)

# Expose compiled files at web/ path for valdi_module consumption
js_library(
    name = "valdi_protobuf_web",
    srcs = [":valdi_protobuf_web_compiled"],
    visibility = ["//visibility:public"],
)

# Export proto files for web tests
js_library(
    name = "proto_files",
    srcs = ["test/proto.protodecl"],
)

valdi_module(
    name = "valdi_protobuf",
    srcs = glob(
        [
            "src/**/*.js",
            "src/**/*.ts",
            "src/**/*.tsx",
            "test/**/*.js",
            "test/**/*.ts",
            "test/**/*.tsx",
        ],
        exclude = [
            "**/scripts/**",
            "**/proto/**",
            "**/headless/**",  # web-only code, included via web_deps
        ],
    ) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    ios_module_name = "SCCValdiProtobuf",
    ios_output_target = "release",
    protodecl_srcs = ["test/proto.protodecl"],
    single_file_codegen = False,
    visibility = ["//visibility:public"],
    web_deps = [":valdi_protobuf_web"],
    web_register_native_module_id_overrides = {
        # Runtime looks up by valdi_core path when loaded from protodecl; ValdiProtobufModule also require('ValdiProtobuf')
        "valdi_protobuf/web/ValdiProtobuf.js": "valdi_core/src/ValdiProtobuf,ValdiProtobuf",
    },
    deps = [
        "//src/valdi_modules/src/valdi/coreutils",
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_standalone",
    ],
)

# Link npm packages for web build and tests
npm_link_all_packages(name = "node_modules")

# Web tests - require npm packages so only work in valdi workspace
js_test(
    name = "valdi_protobuf_web_test",
    data = [
        ":node_modules/jest",
        ":proto_files",
        ":valdi_protobuf_web_compiled",
    ],
    entry_point = "web/test/run_tests.js",
)
