load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "valdi_rxjs",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
        ],
        exclude = [
            "**/node_modules/**",
            "**/observable/dom/**",
            "**/observable/bindNodeCallback.ts",
        ],
    ) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    disable_annotation_processing = True,
    ios_module_name = "SCCValdiRxjs",
    ios_output_target = "release",
    single_file_codegen = False,
    visibility = ["//visibility:public"],
    deps = [
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
    ],
)
