load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "valdi_standalone",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "debug",
    compilation_mode = "js",
    has_android_exports = False,
    has_ios_exports = False,
    ios_module_name = "SCCValdiStandalone",
    ios_output_target = "debug",
    single_file_codegen = True,
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/file_system",
        "//src/valdi_modules/src/valdi/jasmine",
        "//src/valdi_modules/src/valdi/valdi_core",
    ],
)
