load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "valdi_test",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "test/**/*.ts",
        "test/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "debug",
    async_strict_mode = True,
    ios_module_name = "SCCValdiTest",
    ios_output_target = "debug",
    strings_dir = "strings",
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/jasmine",
        "//src/valdi_modules/src/valdi/source_map",
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_standalone",
        "//src/valdi_modules/src/valdi/valdi_tsx",
    ],
)
