load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "worker",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "test/**/*.ts",
        "test/**/*.tsx",
        "test_workers/**/*.ts",
        "test_workers/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    ios_module_name = "SCCWorker",
    ios_output_target = "release",
    visibility = ["//visibility:public"],
    deps = [
        "@valdi//src/valdi_modules/src/valdi/coreutils",
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
        "@valdi//src/valdi_modules/src/valdi/valdi_standalone",
    ],
)
